Runtime no longer has scrollbars on Chrome

--- a/runtime/styles.css
+++ b/runtime/styles.css
@@ -4,6 +4,7 @@
     padding: 0;
     border: 0;
     background-color: #000;
+    overflow: hidden;
 }
 
 #canvasHolder {
